--- a/Cassandra Python/templates/statement.html
+++ b/Cassandra Python/templates/statement.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Customer Information</title>
+    <title>Transaction Statement</title>
     <style>
         td, th {
             border: 1px solid #dddddd;
@@ -11,8 +11,9 @@
         }
     </style>
 </head>
+
 <body>
-<h2>Customer {{cc_num}} Personal Information</h2>
+<h2>Transaction Statement for Customer <a href="http://0.0.0.0:5050/api/customer/{{cc_num}}">{{ cc_num }}</a></h2>
 {% for table in tables %}
     {{ table|safe }}
 {% endfor %}
